--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@
   --header-height: clamp(3.5rem, 8vh, 6rem);
 
   /* Sidebar */
-  --sidebar-width: 12rem;
+  --sidebar-width: 0px;
   --sidebar-height: calc(100vh - var(--header-height));
 }
 
